--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "embla-carousel-autoplay": "^8.0.1",
     "embla-carousel-react": "^8.0.1",
-    "framer-motion": "^11.0.24",
+    "framer-motion": "^11.0.25",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
@@ -21,14 +21,14 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "typescript": "^5"
   }
 }
