--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "husky": "^9.0.11",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
