--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@types/react-big-calendar": "^1.8.9",
     "embla-carousel-autoplay": "^8.0.1",
     "embla-carousel-react": "^8.0.1",
     "framer-motion": "^11.0.25",
+    "moment": "^2.30.1",
     "next": "14.1.3",
     "react": "^18",
+    "react-big-calendar": "^1.11.6",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
